--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "mjctl",
   "version": "0.1.1",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mirajobs/mjctl.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mirajobs/mjctl/issues"
+  },
+  "homepage": "https://github.com/mirajobs/mjctl#readme",
   "bin": {
     "mjctl": "bin/mjctl"
   },
