Update keyword list

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mjctl",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "type": "module",
   "repository": {
     "type": "git",
@@ -14,14 +14,28 @@
     "cli",
     "command-line",
     "job search",
+    "job-search",
     "anonymous job search",
+    "anonymous-job-search",
     "tech job search",
+    "tech-job-search",
     "tech jobs",
+    "tech-jobs",
+    "programming jobs",
+    "programming-jobs",
+    "developer jobs",
+    "developer-jobs",
     "tech careers",
+    "tech-careers",
     "mirajobs",
     "jobs",
+    "job board",
+    "career",
     "recruiting",
     "tech recruiting",
+    "tech-recruiting",
+    "job api",
+    "job-api",
     "resume",
     "privacy",
     "typescript",
